Add path to miniflux ingress

--- a/apps/miniflux.yaml
+++ b/apps/miniflux.yaml
@@ -56,6 +56,9 @@ spec:
         ingressClassName: nginx-internal
         hosts:
           - host: feed.bo0tzz.me
+            paths:
+              - path: /
+                pathType: Prefix
         tls:
           - hosts:
               - feed.bo0tzz.me
