--- a/apps/miniflux.yaml
+++ b/apps/miniflux.yaml
@@ -34,6 +34,8 @@ spec:
         namespace: applications
       interval: 1h
   values:
+    postgresql:
+      enabled: false
     env:
       RUN_MIGRATIONS: 1
       CREATE_ADMIN: 1
