--- a/database/ext-postgres-operator/operator.yaml
+++ b/database/ext-postgres-operator/operator.yaml
@@ -31,7 +31,7 @@ spec:
             - name: OPERATOR_NAME
               value: "ext-postgres-operator"
             - name: POSTGRES_HOST
-              value: app-db-rw
+              value: app-db-rw.database.svc.cluster.local
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
