--- a/apps/miniflux.yaml
+++ b/apps/miniflux.yaml
@@ -17,54 +17,54 @@ spec:
   secretName: database
   privileges: OWNER
 ---
-# apiVersion: helm.toolkit.fluxcd.io/v2beta1
-# kind: HelmRelease
-# metadata:
-#   name: miniflux
-#   namespace: applications
-# spec:
-#   interval: 1h
-#   chart:
-#     spec:
-#       chart: miniflux
-#       version: '4.7.2'
-#       sourceRef:
-#         kind: HelmRepository
-#         name: k8s-at-home
-#         namespace: applications
-#       interval: 1h
-#   values:
-#     postgresql:
-#       enabled: false
-#     env:
-#       RUN_MIGRATIONS: 1
-#       CREATE_ADMIN: 1
-#       ADMIN_USERNAME: boet
-#       ADMIN_PASSWORD:
-#         valueFrom:
-#           secretKeyRef:
-#             name: miniflux-secret
-#             key: admin-password
-#       DATABASE_URL:
-#         valueFrom:
-#           secretKeyRef:
-#             name: database-miniflux-user
-#             key: POSTGRES_URL
-#     ingress:
-#       main:
-#         enabled: true
-#         annotations:
-#           cert-manager.io/cluster-issuer: letsencrypt-prod
-#         ingressClassName: nginx-internal
-#         hosts:
-#           - host: feed.bo0tzz.me
-#             paths:
-#               - path: /
-#                 pathType: Prefix
-#         tls:
-#           - hosts:
-#               - feed.bo0tzz.me
-#             secretName: miniflux-web-tls
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: miniflux
+  namespace: applications
+spec:
+  interval: 1h
+  chart:
+    spec:
+      chart: miniflux
+      version: '4.7.2'
+      sourceRef:
+        kind: HelmRepository
+        name: k8s-at-home
+        namespace: applications
+      interval: 1h
+  values:
+    postgresql:
+      enabled: false
+    env:
+      RUN_MIGRATIONS: 1
+      CREATE_ADMIN: 1
+      ADMIN_USERNAME: boet
+      ADMIN_PASSWORD:
+        valueFrom:
+          secretKeyRef:
+            name: miniflux-secret
+            key: admin-password
+      DATABASE_URL:
+        valueFrom:
+          secretKeyRef:
+            name: database-miniflux-user
+            key: POSTGRES_URL
+    ingress:
+      main:
+        enabled: true
+        annotations:
+          cert-manager.io/cluster-issuer: letsencrypt-prod
+        ingressClassName: nginx-internal
+        hosts:
+          - host: feed.bo0tzz.me
+            paths:
+              - path: /
+                pathType: Prefix
+        tls:
+          - hosts:
+              - feed.bo0tzz.me
+            secretName: miniflux-web-tls
 ---
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
