--- a/apps/miniflux.yaml
+++ b/apps/miniflux.yaml
@@ -54,6 +54,7 @@ spec:
       main:
         enabled: true
         annotations:
+          kubernetes.io/ingress.class: nginx-internal
           cert-manager.io/cluster-issuer: letsencrypt-prod
         ingressClassName: nginx-internal
         hosts:
