--- a/apps/miniflux.yaml
+++ b/apps/miniflux.yaml
@@ -37,6 +37,8 @@ spec:
     postgresql:
       enabled: false
     env:
+      POLLING_FREQUENCY: 10
+      BASE_URL: https://feed.bo0tzz.me
       RUN_MIGRATIONS: 1
       CREATE_ADMIN: 1
       ADMIN_USERNAME: boet
