Revert "Use deployment instead of cronjob for yt sync"
This reverts commit 3e86768b4113fcf3d55054d635b2bce91f75483d.

--- a/media/youtube-sync.yaml
+++ b/media/youtube-sync.yaml
@@ -1,38 +1,34 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: batch/v1beta1
+kind: CronJob
 metadata:
   name: youtube-sync
   namespace: media
-  labels:
-    app: youtube-sync
 spec:
-  selector:
-      matchLabels:
-        app: youtube-sync
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: youtube-sync
+  schedule: "*/5 * * * *"
+  concurrencyPolicy: Forbid
+  jobTemplate:
     spec:
-      volumes:
-        - name: library
-          persistentVolumeClaim:
-            claimName: youtube-library
-      containers:
-        - name: youtube-sync
-          image: ghcr.io/bo0tzz/yt_emby_sync:main
-          imagePullPolicy: Always
-          volumeMounts:
+      template:
+        spec:
+          restartPolicy: Never
+          volumes:
             - name: library
-              mountPath: /library
-          env:
-            - name: YT_PLAYLIST_URL
-              value: https://www.youtube.com/playlist?list=PL3g5xwbQbHOQnjbZHQfeJW08PotvJ3JEh
-            - name: DOWNLOAD_FOLDER
-              value: /library
-            - name: DESTRUCTIVE
-              value: "true"
+              persistentVolumeClaim:
+                claimName: youtube-library
+          containers:
+            - name: youtube-sync
+              image: ghcr.io/bo0tzz/yt_emby_sync:main
+              imagePullPolicy: Always
+              volumeMounts:
+                - name: library
+                  mountPath: /library
+              env:
+                - name: YT_PLAYLIST_URL
+                  value: https://www.youtube.com/playlist?list=PL3g5xwbQbHOQnjbZHQfeJW08PotvJ3JEh
+                - name: DOWNLOAD_FOLDER
+                  value: /library
+                - name: DESTRUCTIVE
+                  value: "true"
 ---
 apiVersion: v1
 kind: PersistentVolume
