--- a/media/youtube-sync.yaml
+++ b/media/youtube-sync.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   schedule: "*/5 * * * *"
   concurrencyPolicy: Forbid
+  successfulJobsHistoryLimit: 0
   jobTemplate:
     spec:
       template:
