--- a/infrastructure/storage/openebs.yaml
+++ b/infrastructure/storage/openebs.yaml
@@ -1,3 +1,12 @@
+apiVersion: source.toolkit.fluxcd.io/v1beta1
+kind: HelmRepository
+metadata:
+  name: openebs
+  namespace: storage
+spec:
+  interval: 1h
+  url: https://openebs.github.io/charts
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -12,7 +21,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: openebs
-        namespace: flux-system
+        namespace: storage
       interval: 1h
   values:
     jiva:
