--- a/infrastructure/ingress/ingress-nginx.yaml
+++ b/infrastructure/ingress/ingress-nginx.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
   name: ingress-nginx     
-  namespace: ingress-nginx
+  namespace: ingress
 spec:
   interval: 1h
   url: https://kubernetes.github.io/ingress-nginx
@@ -11,7 +11,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: ingress-nginx
-  namespace: ingress-nginx
+  namespace: ingress
 spec:
   interval: 1h
   chart:
@@ -21,7 +21,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: ingress-nginx
-        namespace: ingress-nginx
+        namespace: ingress
       interval: 1h
   values:
     controller:
@@ -34,7 +34,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: ingress-nginx-internal
-  namespace: ingress-nginx
+  namespace: ingress
 spec:
   interval: 1h
   chart:
@@ -44,7 +44,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: ingress-nginx
-        namespace: ingress-nginx
+        namespace: ingress
       interval: 1h
   values:
     controller:
