--- a/infrastructure/dns/external-dns/external-dns.yaml
+++ b/infrastructure/dns/external-dns/external-dns.yaml
@@ -28,7 +28,7 @@ spec:
       - ingress
     annotationFilter: kubernetes.io/ingress.class in (nginx)
     provider: cloudflare
-    policy: sync
+    policy: upsert-only
     txtPrefix: external-dns-
     cloudflare:
       proxied: false
@@ -64,7 +64,7 @@ spec:
     annotationFilter: kubernetes.io/ingress.class in (nginx-internal)
     txtOwnerId: internal
     provider: cloudflare
-    policy: sync
+    policy: upsert-only
     cloudflare:
       proxied: false
       secretName: cloudflare-api-token-secret
