--- a/infrastructure/dns/cloudflare-api-token.yaml
+++ b/infrastructure/dns/cloudflare-api-token.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-    cloudflare_api_token: ENC[AES256_GCM,data:j0JxkESybEgrzfOek6DrpEbCVmZmnFkhhNvwGIsxRSTi7av0X3X0kN4VZh0lQ9a/lc3/0x1CBeI=,iv:XMsMjba7tL9Y+S+68vnYBLekhgQ4H87FGMcMegnUuro=,tag:xgIdLvF8CqgQaUxm/DxtKA==,type:str]
+    cloudflare_api_token: ENC[AES256_GCM,data:d0m+I0wCxKgbCmYB8FBn6iVoy2EKqN1jdD3kiOuF586I3vN9N1tVaWevokcdC5NNLdvcEBd7moI=,iv:ud/ZShkwgKbjtAVez9zaQh0lr+GQekHUz55GxrT2LPk=,tag:SZ4Iy5O+rkCvAFbAAwp/8w==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
@@ -12,28 +12,28 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-06-11T09:59:28Z"
-    mac: ENC[AES256_GCM,data:C0BrP6huE8U9l+ifmZIkn5CWJ5RJEe82lH1KPWcOLtnvy11iPBHxo5hRRNwgPVqbqc1RJVT3iJaEZssi5V4TuDfWoI8ez9oXYJjlK2aF4W+IXBB9wOvIW/p4jPp+dVWCHdcnvyVjrotKqwg5sCEWU1OkiTuCo1lj8XtnXmb2DdI=,iv:ZXJITJw6Y31fcnJQo/ztzfbUTg9F7rU/pN1B2SHiT34=,tag:qhG2k3I4QuhTBLCf8RKnPg==,type:str]
+    lastmodified: "2022-06-11T10:08:35Z"
+    mac: ENC[AES256_GCM,data:mE8rF90hHR1aKoh0pEP6BteC/oiCYFvHGejAwlvXOqFfUyLb58fjBQNnNXjWFiq39YJWPpXS/4xZK45ZhFhiveDVYW31bOsyc+yl/CoGMEjmqPnhZz0cSU+a4x2HlI81xTOntwQ4Ahz1OjkT8cxndlqdqKvPyHR2yoQ5svWfXyQ=,iv:J6q/QnigOFDANA+S7umOgoEvREP4jK2o2PPoDDBeTnU=,tag:ts34rFLoa/RfQ56fsMO21A==,type:str]
     pgp:
-        - created_at: "2022-06-11T09:59:27Z"
+        - created_at: "2022-06-11T10:08:35Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQIMA2YE/I5Bjk+6ARAAjiV8jXpjYMZgzixLfzD/cjHdUDfh6ERBU1nPhAk7CuAv
-            tYVjwRlDukE+PLovENT2+6hB+nALzOy305HBcYR6WoXg+xeWOzBgdD5Ytkcm9Xgd
-            DhZNu3UTdaEMhTFac20idlHp6su9RtYYJMaupJEt6FS3sUjaFmjeJ615H7HebMJw
-            jxxxkSZoLQseW9/NrrmLcAKg9XB1kZtiQM16ftWScPM3znUIJqyE2uQR72akxwMH
-            NP8oAwV26E36JVrLBj2tM9qmiENEZmjDczppw1GWH76pIGwLajxX/Ioh63vFU/0d
-            jBXBA28LiCcxMCoUbeP+mg4IpmRp1zSr2Q+JbdMyv+4Rj2OsdPkdLQFxmkmgxqfL
-            DnF6Lqf7NTSV6jq5c9xCv8wnHpN0ayRMBv9VxELtmtVQ8fym6tBpY7PNnebpLPC+
-            RcdU08KHEHfX7NsEasPPlS5ZQIP4xtO/8AO84rUeSjlgjHuYkd/TF+/B3XkVbDw6
-            iOGt83HhIMw88UbfDCdbcSOwDeIb+nVmSmw/hFgLzHBZZbRaVHt34MvLs3lXxyeX
-            qboziRgX1NEpzy2Asj4BKqZDPlxCITfuqURxy799643GzEd6shaISJXPcTmm1BDX
-            sa6Rto7pvaO+v+Scm18uWYWyDyHFgvGVpwnXZfd25Ug7b/L0oYFddi4x7cphh1/U
-            aAEJAhAe/38nPiFul9NsE4poITSiq/y28SYY6WowpRXerU3NnRCK2sqnhFrKU52v
-            lBGj4CND3BP8wcVWIHGmuHd8u1raTCAp2rKJX8hTx3XNePCZ4jLWSRaeE6TwWUuf
-            jx8pyk/zrslp
-            =pf+o
+            hQIMA2YE/I5Bjk+6AQ/5Ae2+0OHXZWbUZTeBIyXkRZhCMYw1+CpAspIgb1mS9/mn
+            13YGQd+GP5Eg0TJZxS5pFL6jbYMucAOoTmssNFZTqst8VgnDIbogegj3a6AZNpEe
+            8XZWoyIYTPwvKbK4bJDXoPEAP6+sjgeKi142SJzu6S0rkot3i+u21q7DGoPoEZYf
+            Cg8sPpEhR7iR5idgdnklEfh39PbM9Wzj8tPz14MaDEgF8kvpIfF4YuNr+Cf1Ij7e
+            M93JNLggyBMqtg9mHJ3YTt2atqSpg5e1g36gdQMkahAfwh4tjMx+e5m/w3FU9kR9
+            IwaxAMYEMnP+K2HXFbz6xe20gHsxdAKikc17uNZ1B+2PdN1W7Tbxz0HTCBceqCGO
+            YPN7il/7TjpBEpgj3KTKrdffahCVkdhTD6LrLpn/ah+tF2kgvuIoquxCULSaPfj9
+            oOYjOQgN/4RcTZ8oECX22huHtTMLVPOFt9ANtWYmBfshpDRQNIBRcJgYsptM/vZT
+            j3c8WXcL24PT5xsP/eFrRNcD7cC2cRe0wh8068QC+z0ZPsR0HW8Dbn2kPIPiJG+b
+            nlV2ahHd7lqdZwzZjVq2yk05YjRYsV2s3SaD226ctcGMT6mcYFoZG4EiP4/iy1tX
+            b8haMwg6Tvg+A8AbAoQejkjfsDgTDn0N9mWWNzYL9s3VgrCvjQ2Bz6fwEg8fMnjU
+            aAEJAhBVqg2wXwt0bKNx5ZHprqMoqwymSjLWQa4tlvr9Ud5/TkX3jrCgg+xDy243
+            FgdN6+o0sQAAp7dIKMCv1Ic5TlNZd/w7w6iRL7uXofn8X3rSwFr6uJdm3BvEQUZo
+            hMV/zt9PFCaQ
+            =sp5S
             -----END PGP MESSAGE-----
           fp: DB3395B20E82DA5501D7B353AF52965D73D119F7
     encrypted_regex: ^(data|stringData)$
