--- a/infrastructure/dns/cloudflare-api-token.yaml
+++ b/infrastructure/dns/cloudflare-api-token.yaml
@@ -1,39 +1,40 @@
 apiVersion: v1
 data:
-    cloudflare_api_token: ENC[AES256_GCM,data:d0m+I0wCxKgbCmYB8FBn6iVoy2EKqN1jdD3kiOuF586I3vN9N1tVaWevokcdC5NNLdvcEBd7moI=,iv:ud/ZShkwgKbjtAVez9zaQh0lr+GQekHUz55GxrT2LPk=,tag:SZ4Iy5O+rkCvAFbAAwp/8w==,type:str]
+    cloudflare_api_token: ENC[AES256_GCM,data:Hc51V1IbRuqy7y7Z1orvHZjoY6ANT7Ac8l4NWQ9k5IKL7TtlXqaMXRofKYyYjZoDoJfsWCn2pG4=,iv:tWY2oAI/HEAEaZuqwE1OA4sb/4CO4qufaVIUT3LVS6k=,tag:XikepPJTlu9e6aop0iAShA==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
     name: cloudflare_api_token
     namespace: dns
+type: Opaque
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-06-11T10:08:35Z"
-    mac: ENC[AES256_GCM,data:mE8rF90hHR1aKoh0pEP6BteC/oiCYFvHGejAwlvXOqFfUyLb58fjBQNnNXjWFiq39YJWPpXS/4xZK45ZhFhiveDVYW31bOsyc+yl/CoGMEjmqPnhZz0cSU+a4x2HlI81xTOntwQ4Ahz1OjkT8cxndlqdqKvPyHR2yoQ5svWfXyQ=,iv:J6q/QnigOFDANA+S7umOgoEvREP4jK2o2PPoDDBeTnU=,tag:ts34rFLoa/RfQ56fsMO21A==,type:str]
+    lastmodified: "2022-06-11T10:10:48Z"
+    mac: ENC[AES256_GCM,data:4IzQy2yYE8wZ5Hrxz1Xzmpq3wjZs9yGksnrG2sCN3+HT9r/R/e8Hq61nncHtUMcnh51sSh8qkf7NBr27KohaQTBL66mAtRvk7JDZB5Z8yB6RZWb+BzNDhzqES/rBniMxR5EtHd5QXpwd1PVAbNAmfw2M3rmLUffKYYf2Lse9sDs=,iv:Jl1ocaUjo0soDLbG8q4R9jRT+kf6DOFiDHk/FrDFWS4=,tag:pNi5HXgy9us4L2ozF7d2pg==,type:str]
     pgp:
-        - created_at: "2022-06-11T10:08:35Z"
+        - created_at: "2022-06-11T10:10:48Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQIMA2YE/I5Bjk+6AQ/5Ae2+0OHXZWbUZTeBIyXkRZhCMYw1+CpAspIgb1mS9/mn
-            13YGQd+GP5Eg0TJZxS5pFL6jbYMucAOoTmssNFZTqst8VgnDIbogegj3a6AZNpEe
-            8XZWoyIYTPwvKbK4bJDXoPEAP6+sjgeKi142SJzu6S0rkot3i+u21q7DGoPoEZYf
-            Cg8sPpEhR7iR5idgdnklEfh39PbM9Wzj8tPz14MaDEgF8kvpIfF4YuNr+Cf1Ij7e
-            M93JNLggyBMqtg9mHJ3YTt2atqSpg5e1g36gdQMkahAfwh4tjMx+e5m/w3FU9kR9
-            IwaxAMYEMnP+K2HXFbz6xe20gHsxdAKikc17uNZ1B+2PdN1W7Tbxz0HTCBceqCGO
-            YPN7il/7TjpBEpgj3KTKrdffahCVkdhTD6LrLpn/ah+tF2kgvuIoquxCULSaPfj9
-            oOYjOQgN/4RcTZ8oECX22huHtTMLVPOFt9ANtWYmBfshpDRQNIBRcJgYsptM/vZT
-            j3c8WXcL24PT5xsP/eFrRNcD7cC2cRe0wh8068QC+z0ZPsR0HW8Dbn2kPIPiJG+b
-            nlV2ahHd7lqdZwzZjVq2yk05YjRYsV2s3SaD226ctcGMT6mcYFoZG4EiP4/iy1tX
-            b8haMwg6Tvg+A8AbAoQejkjfsDgTDn0N9mWWNzYL9s3VgrCvjQ2Bz6fwEg8fMnjU
-            aAEJAhBVqg2wXwt0bKNx5ZHprqMoqwymSjLWQa4tlvr9Ud5/TkX3jrCgg+xDy243
-            FgdN6+o0sQAAp7dIKMCv1Ic5TlNZd/w7w6iRL7uXofn8X3rSwFr6uJdm3BvEQUZo
-            hMV/zt9PFCaQ
-            =sp5S
+            hQIMA2YE/I5Bjk+6AQ//ZlTuShr7yQ9GwxtzUaCsPkWqOdOcSefQPInbLBRdbCQc
+            H2JPgKRrg5ug0bHR9J1mhi44hBLAQ+EYwwjEn6OooCqqqqgQRrclLPXw/4PMUlnJ
+            yBZX7opaaEnc2p7/u+HWIkioMpCw+8XUBZ8ja/+TXWpbqfXvvPD7+mK7PCjiNE3J
+            WjSvkZipSbPy6bevRk6p96mlwSXPMxhxB9rMrzoEM6RhEKybhln/a537PqbpJ8tI
+            cCY/3Mtkgt1Xtj+AySLdNU9zgxZ/9YJXHfRI/dXV7YWDvtyLo0EeebKQVQ3OU7K2
+            jEEkf689Td+F7+CT5Cr5m2KS15eHryWvTIdCCWc4RT50je6yv9TJ3Y2KHSU2POvn
+            sMKoQAykyJTwQ/3pLasBBv81rg7Aaf+9fKUGJFcHLNqskiTu+Vlr/gKJ2x/1fDT7
+            S++DmWpLZKKeji4H1vwS4droHJo5EmBJmqGVN2ihx4dmHYXROk8JFjb0bk6xGhN6
+            qk/KpdQWHtuYEZnn/wsqVc3MIawi87VHFKHQ7e0zPL8UvZ20fFroTCWGZLcZ+AKd
+            pIcxti3IgwAEuJGU7wZ3qVbIZRyWkh4nRjFrqTMxIBkWOvh08C6ag8ejpS1ArPza
+            TyOGchAJhfbWnlnO5+qnAs+JiAi+o3npLq/oQQPzWtl/bamiW40AwF+LGg0FPe/U
+            aAEJAhARuLad9cneoGk8XGS4BH9ZdYYCJzUCBvSzMWJodZKorAbG71350EVdKwRz
+            ABF8we1oii+5QCC7p1O+XqsB0DYGWtV1euIUQ7MHwuokxUb09CnonhSb+shRkHqD
+            Q2GNJnahOJ3A
+            =Fg4Q
             -----END PGP MESSAGE-----
           fp: DB3395B20E82DA5501D7B353AF52965D73D119F7
     encrypted_regex: ^(data|stringData)$
