--- a/infrastructure/dns/cloudflare-issuer.yaml
+++ b/infrastructure/dns/cloudflare-issuer.yaml
@@ -1,18 +1,18 @@
-# apiVersion: cert-manager.io/v1
-# kind: ClusterIssuer
-# metadata:
-#   name: letsencrypt-prod
-#   namespace: dns
-# spec:
-#   acme:
-#     email: le-acme@bo0tzz.me
-#     server: https://acme-v02.api.letsencrypt.org/directory
-#     privateKeySecretRef:
-#       name: letsencrypt-prod-key
-#     solvers:
-#     - dns01:
-#         cloudflare:
-#           email: btdewilligen@gmail.com
-#           apiTokenSecretRef:
-#             name: cloudflare-api-token
-#             key: cloudflare_api_token
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-prod
+  namespace: dns
+spec:
+  acme:
+    email: le-acme@bo0tzz.me
+    server: https://acme-v02.api.letsencrypt.org/directory
+    privateKeySecretRef:
+      name: letsencrypt-prod-key
+    solvers:
+    - dns01:
+        cloudflare:
+          email: btdewilligen@gmail.com
+          apiTokenSecretRef:
+            name: cloudflare-api-token
+            key: cloudflare_api_token
