--- a/infrastructure/ingress/ingress-nginx.yaml
+++ b/infrastructure/ingress/ingress-nginx.yaml
@@ -48,6 +48,7 @@ spec:
       interval: 1h
   values:
     controller:
+      electionID: ingress-controller-internal-leader
       service:
         loadBalancerIP: 192.168.4.101
       ingressClass: nginx-internal
