Fix static_configs map spec

--- a/infrastructure/monitoring/kube-prometheus-stack.yaml
+++ b/infrastructure/monitoring/kube-prometheus-stack.yaml
@@ -42,7 +42,7 @@ spec:
         additionalScrapeConfigs:
           - job_name: 'snmp'
             static_configs:
-              targets:
+              - targets:
                 - 192.168.1.102
             metrics_path: /snmp
             params:
