Use apcups module for snmp scrape

--- a/infrastructure/monitoring/kube-prometheus-stack.yaml
+++ b/infrastructure/monitoring/kube-prometheus-stack.yaml
@@ -46,7 +46,7 @@ spec:
                 - 192.168.1.102
             metrics_path: /snmp
             params:
-              module: [if_mib]
+              module: [apcups]
             relabel_configs:
               - source_labels: [__address__]
                 target_label: __param_target
