--- a/media/sonarr.yaml
+++ b/media/sonarr.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: sonarr
-  namespace: applications
+  namespace: media
 spec:
   interval: 1h
   chart:
