--- a/media/k8s-at-home-repo.yaml
+++ b/media/k8s-at-home-repo.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
   name: k8s-at-home     
-  namespace: flux-system
+  namespace: media
 spec:
   interval: 1h
   url: https://k8s-at-home.com/charts/
