Only apply fsGroup when necessary

--- a/media/sonarr.yaml
+++ b/media/sonarr.yaml
@@ -19,6 +19,7 @@ spec:
       runAsUser: 568
       runAsGroup: 568
       fsGroup: 568
+      fsGroupChangePolicy: "OnRootMismatch"
     persistence:
       config:
         enabled: true
