--- a/media/qbittorrent.yaml
+++ b/media/qbittorrent.yaml
@@ -15,6 +15,9 @@ spec:
         namespace: media
       interval: 1h
   values:
+    service:
+      bittorrent:
+        enabled: true
     podSecurityContext:
       runAsUser: 568
       runAsGroup: 568
