Try setting ndots for qbittorrent pod

--- a/media/qbittorrent.yaml
+++ b/media/qbittorrent.yaml
@@ -15,6 +15,10 @@ spec:
         namespace: media
       interval: 1h
   values:
+    dnsConfig:
+      options:
+        - name: ndots
+          value: "1"
     service:
       bittorrent:
         enabled: true
