--- a/infrastructure/storage/backup/minio.yaml
+++ b/infrastructure/storage/backup/minio.yaml
@@ -67,7 +67,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: minio-gateway-service
+  name: minio-backup
   namespace: storage
 spec:
   type: ClusterIP
