--- a/infrastructure/metallb.yaml
+++ b/infrastructure/metallb.yaml
@@ -21,7 +21,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: metallb
-        namespace: metallb-system
+        namespace: kube-system
       interval: 1h
   values:
     configInline: |
