--- a/infrastructure/monitoring/kube-prometheus-stack.yaml
+++ b/infrastructure/monitoring/kube-prometheus-stack.yaml
@@ -29,12 +29,12 @@ spec:
             secretName: grafana-web-tls
       persistence:
         enabled: true
-        storageClassName: openebs-jiva-csi-default
+        storageClassName: zfs-iscsi
     prometheus:
       prometheusSpec:
         volumeClaimTemplate:
           spec:
-            storageClassName: openebs-jiva-csi-default
+            storageClassName: zfs-iscsi
             accessModes: ["ReadWriteOnce"]
             resources:
               requests:
