--- a/flux-system/gotk-sync.yaml
+++ b/flux-system/gotk-sync.yaml
@@ -27,3 +27,21 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: infra
+  namespace: flux-system
+spec:
+  interval: 10m0s
+  path: ./infrastructure
+  prune: true
+  decryption:
+    provider: sops
+    secretRef: 
+      name: sops-gpg
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+
