--- a/media/jackett.yaml
+++ b/media/jackett.yaml
@@ -23,7 +23,7 @@ spec:
     persistence:
       config:
         enabled: true
-        storageClass: openebs-jiva-csi-default
+        storageClass: zfs-iscsi
     ingress:
       main:
         enabled: true
