--- a/media/emby.yaml
+++ b/media/emby.yaml
@@ -1,14 +1,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: jellyfin
+  name: emby
   namespace: media
 spec:
   interval: 1h
   chart:
     spec:
-      chart: jellyfin
-      version: '9.4.2'
+      chart: emby
+      version: '3.3.2'
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home
@@ -34,11 +34,11 @@ spec:
           kubernetes.io/ingress.class: nginx-internal
           cert-manager.io/cluster-issuer: letsencrypt-prod
         hosts:
-          - host: jellyfin.bo0tzz.me
+          - host: emby.bo0tzz.me
             paths:
               - path: /
                 pathType: Prefix
         tls:
           - hosts:
-              - jellyfin.bo0tzz.me
-            secretName: jellyfin-web-tls
+              - emby.bo0tzz.me
+            secretName: emby-web-tls
