--- a/media/emby.yaml
+++ b/media/emby.yaml
@@ -18,6 +18,9 @@ spec:
     image:
       repository: lscr.io/linuxserver/emby
       tag: 4.7.4
+    env:
+      PUID: 568
+      PGID: 568
     podSecurityContext:
       runAsUser: 568
       runAsGroup: 568
