--- a/media/emby.yaml
+++ b/media/emby.yaml
@@ -15,6 +15,9 @@ spec:
         namespace: media
       interval: 1h
   values:
+    image:
+      repository: ghcr.io/bo0tzz/emby
+      tag: 4.7.4.0
     podSecurityContext:
       runAsUser: 568
       runAsGroup: 568
