--- a/apps/jitsi.yaml
+++ b/apps/jitsi.yaml
@@ -30,6 +30,7 @@ spec:
             - jitsi.test.bo0tzz.me
     jvb:
       UDPPort: 30300
+      publicIP: 192.168.4.102
       service:
         type: LoadBalancer
         loadBalancerIP: 192.168.4.102
