--- a/apps/jitsi.yaml
+++ b/apps/jitsi.yaml
@@ -37,3 +37,6 @@ spec:
         loadBalancerIP: 192.168.4.102
       metrics:
         enabled: true
+    prosody:
+      persistence:
+        storageClassName: zfs-iscsi
