Configure prometheus to pick up all monitors

--- a/infrastructure/monitoring/kube-prometheus-stack.yaml
+++ b/infrastructure/monitoring/kube-prometheus-stack.yaml
@@ -32,6 +32,8 @@ spec:
         storageClassName: zfs-iscsi
     prometheus:
       prometheusSpec:
+        serviceMonitorSelectorNilUsesHelmValues: false
+        podMonitorSelectorNilUsesHelmValues: false
         volumeClaimTemplate:
           spec:
             storageClassName: zfs-iscsi
