Set podSecurityContext for spoorkapot

--- a/apps/spoorkapot/deployment.yaml
+++ b/apps/spoorkapot/deployment.yaml
@@ -17,6 +17,11 @@ spec:
       labels:
         app: spoorkapot
     spec:
+      podSecurityContext:
+        runAsUser: 65534
+        runAsGroup: 65534
+        fsGroup: 65534
+        fsGroupChangePolicy: "OnRootMismatch"
       volumes:
         - name: data
           persistentVolumeClaim:
