--- a/apps/spoorkapot/deployment.yaml
+++ b/apps/spoorkapot/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       labels:
         app: spoorkapot
     spec:
-      podSecurityContext:
+      securityContext:
         runAsUser: 65534
         runAsGroup: 65534
         fsGroup: 65534
