--- a/apps/jitsi.yaml
+++ b/apps/jitsi.yaml
@@ -15,7 +15,7 @@ spec:
         namespace: applications
       interval: 1h
   values:
-    publicURL: "https://jitsi.test.bo0tzz.me"
+    publicURL: "https://jitsi.bo0tzz.me"
     web:
       ingress:
         enabled: true
@@ -23,15 +23,15 @@ spec:
           kubernetes.io/ingress.class: nginx-internal
           cert-manager.io/cluster-issuer: letsencrypt-prod
         hosts:
-        - host: jitsi.test.bo0tzz.me
+        - host: jitsi.bo0tzz.me
           paths: ['/']
         tls:
-        - secretName: jitsi-test-web-tls
+        - secretName: jitsi-web-tls
           hosts:
-            - jitsi.test.bo0tzz.me
+            - jitsi.bo0tzz.me
     jvb:
       UDPPort: 30300
-      publicIP: 192.168.4.102
+      publicIP: 83.86.109.63
       service:
         type: LoadBalancer
         loadBalancerIP: 192.168.4.102
