--- a/apps/calibre.yaml
+++ b/apps/calibre.yaml
@@ -24,6 +24,22 @@ spec:
       books:
         enabled: true
         existingClaim: library
+    ingress:
+      main:
+        enabled: true
+        annotations:
+          kubernetes.io/ingress.class: nginx
+          cert-manager.io/cluster-issuer: letsencrypt-prod
+          external-dns.alpha.kubernetes.io/target: bo0tzz.me
+        hosts:
+          - host: calibre.bo0tzz.me
+            paths:
+              - path: /
+                pathType: Prefix
+        tls:
+          - hosts:
+              - calibre.bo0tzz.me
+            secretName: calibre-web-tls
 ---
 apiVersion: v1
 kind: PersistentVolume
