--- a/apps/imagebot.yaml
+++ b/apps/imagebot.yaml
@@ -26,6 +26,10 @@ spec:
         - name: data
           persistentVolumeClaim:
             claimName: imagebot-data
+      dnsConfig:
+        options:
+          - name: ndots
+            value: "1"
       containers:
         - name: imagebot
           image: ghcr.io/bo0tzz/image_bot:main
