--- a/apps/vaultwarden.yaml
+++ b/apps/vaultwarden.yaml
@@ -44,3 +44,19 @@ spec:
           secretKeyRef:
             name: database-vaultwarden-user
             key: POSTGRES_URL
+    ingress:
+      main:
+        enabled: true
+        annotations:
+          kubernetes.io/ingress.class: nginx
+          cert-manager.io/cluster-issuer: letsencrypt-prod
+          external-dns.alpha.kubernetes.io/target: bo0tzz.me
+        hosts:
+          - host: pass.bo0tzz.me
+            paths:
+              - path: /
+                pathType: Prefix
+        tls:
+          - hosts:
+              - pass.bo0tzz.me
+            secretName: vaultwarden-web-tls
