--- a/infrastructure/ingress/ingress-nginx.yaml
+++ b/infrastructure/ingress/ingress-nginx.yaml
@@ -27,6 +27,8 @@ spec:
     controller:
       service:
         loadBalancerIP: 192.168.4.100
+        annotations:
+          external-dns.alpha.kubernetes.io/hostname: bo0tzz.me
       image:
         digest: null
       metrics:
