Revert "Remove target annotation from linx ingress"
This reverts commit 581ec3703658a794e0467379130d12214ecaaeae.

--- a/apps/linx-server/service.yaml
+++ b/apps/linx-server/service.yaml
@@ -21,6 +21,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    external-dns.alpha.kubernetes.io/target: bo0tzz.me
 spec:
   tls:
   - hosts: 
