Quote bools in namespace labels

--- a/media/namespace.yaml
+++ b/media/namespace.yaml
@@ -3,4 +3,4 @@ kind: Namespace
 metadata:
   name: media
   labels:
-    goldilocks.fairwinds.com/enabled: true
+    goldilocks.fairwinds.com/enabled: "true"
