--- a/apps/namespace.yaml
+++ b/apps/namespace.yaml
@@ -3,4 +3,4 @@ kind: Namespace
 metadata:
   name: applications
   labels:
-    goldilocks.fairwinds.com/enabled: true
+    goldilocks.fairwinds.com/enabled: "true"
