--- a/database/namespace.yaml
+++ b/database/namespace.yaml
@@ -3,4 +3,4 @@ kind: Namespace
 metadata:
   name: database
   labels:
-    goldilocks.fairwinds.com/enabled: true
+    goldilocks.fairwinds.com/enabled: "true"
