--- a/apps/miniflux.yaml
+++ b/apps/miniflux.yaml
@@ -38,6 +38,7 @@ spec:
       enabled: false
     env:
       BASE_URL: https://feed.bo0tzz.me
+      POLLING_PARSING_ERROR_LIMIT: 0
       RUN_MIGRATIONS: 1
       CREATE_ADMIN: 1
       ADMIN_USERNAME: boet
