--- a/apps/miniflux.yaml
+++ b/apps/miniflux.yaml
@@ -37,6 +37,7 @@ spec:
     postgresql:
       enabled: false
     env:
+      POLLING_FREQUENCY: 10
       BASE_URL: https://feed.bo0tzz.me
       POLLING_PARSING_ERROR_LIMIT: 0
       RUN_MIGRATIONS: 1
