Add restartPolicy to rsync job

--- a/apps/rdiff-backup/job.yaml
+++ b/apps/rdiff-backup/job.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   template:
     spec:
+      restartPolicy: OnFailure
       containers:
         - name: rsync
           image: "ghcr.io/bo0tzz/rsync:main"
