--- a/apps/linx-server/service.yaml
+++ b/apps/linx-server/service.yaml
@@ -22,6 +22,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
     external-dns.alpha.kubernetes.io/target: bo0tzz.me
+    nginx.ingress.kubernetes.io/proxy-body-size: 0
 spec:
   tls:
   - hosts: 
