Set podSecurityContext for calibre

--- a/apps/calibre.yaml
+++ b/apps/calibre.yaml
@@ -17,6 +17,11 @@ spec:
   values:
     image:
       tag: "0.6.18"
+    podSecurityContext:
+      runAsUser: 501
+      runAsGroup: 50
+      fsGroup: 50
+      fsGroupChangePolicy: "OnRootMismatch"
     persistence:
       config:
         enabled: true
