--- a/apps/calibre.yaml
+++ b/apps/calibre.yaml
@@ -22,6 +22,9 @@ spec:
       runAsGroup: 50
       fsGroup: 50
       fsGroupChangePolicy: "OnRootMismatch"
+    env:
+      PUID: "501"
+      PGID: "50"
     persistence:
       config:
         enabled: true
