More rsync exclude fixing

--- a/apps/rdiff-backup/job.yaml
+++ b/apps/rdiff-backup/job.yaml
@@ -15,13 +15,13 @@ spec:
             - "-rvzhaP"
             - "--no-owner"
             - "--no-group"
-            - "--exclude='/camera/'"
-            - "--exclude='/domains/'"
-            - "--exclude='/isos/'"
-            - "--exclude='/games/'"
-            - "--exclude='/music/'"
-            - "--exclude='/downloads/'"
-            - "--exclude='/system/docker/docker.img'"
+            - "--exclude='camera/'"
+            - "--exclude='domains/'"
+            - "--exclude='isos/'"
+            - "--exclude='games/'"
+            - "--exclude='music/'"
+            - "--exclude='downloads/'"
+            - "--exclude='system/docker/docker.img'"
             - "root@10.253.0.1:/mnt/user/"
             - "/target"
           env:
