--- a/media/youtube-dl.yaml
+++ b/media/youtube-dl.yaml
@@ -15,6 +15,8 @@ spec:
         namespace: media
       interval: 1h
   values:
+    command: /usr/bin/npm
+    args: start
     image:
       repository: ghcr.io/bo0tzz/youtubedl-material
       tag: "latest"
