--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -88,9 +88,9 @@ spec:
       main:
         enabled: true
         annotations:
-          kubernetes.io/ingress.class: nginx
+          kubernetes.io/ingress.class: nginx-internal
           cert-manager.io/cluster-issuer: letsencrypt-prod
-          external-dns.alpha.kubernetes.io/target: bo0tzz.me
+          # external-dns.alpha.kubernetes.io/target: bo0tzz.me
         hosts:
           - host: photos.bo0tzz.me
             paths:
