Set resource requests

--- a/apps/home-assistant.yaml
+++ b/apps/home-assistant.yaml
@@ -38,3 +38,7 @@ spec:
           - hosts:
               - hass.bo0tzz.me
             secretName: home-assistant-web-tls
+    resources:
+      requests:
+        cpu: 20m
+        memory: 250M
