--- a/media/radarr.yaml
+++ b/media/radarr.yaml
@@ -42,3 +42,7 @@ spec:
           - hosts:
               - radarr.bo0tzz.me
             secretName: radarr-web-tls
+    resources:
+      requests:
+        cpu: 20m
+        memory: 500M
