--- a/apps/calibre.yaml
+++ b/apps/calibre.yaml
@@ -44,6 +44,10 @@ spec:
           - hosts:
               - calibre.bo0tzz.me
             secretName: calibre-web-tls
+    resources:
+      requests:
+        cpu: 20m
+        memory: 200M
 ---
 apiVersion: v1
 kind: PersistentVolume
