--- a/apps/homepage/deployment.yaml
+++ b/apps/homepage/deployment.yaml
@@ -26,3 +26,7 @@ spec:
           envFrom:
           - secretRef:
               name: homepage-secret
+          resources:
+            requests:
+              cpu: 20m
+              memory: 200M
