--- a/apps/imagebot.yaml
+++ b/apps/imagebot.yaml
@@ -43,6 +43,10 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /data
+          resources:
+            requests:
+              cpu: 20m
+              memory: 200M
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
