--- a/apps/linx-server/deployment.yaml
+++ b/apps/linx-server/deployment.yaml
@@ -35,3 +35,7 @@ spec:
           volumeMounts:
             - name: files
               mountPath: /data
+          resources:
+            requests:
+              cpu: 20m
+              memory: 128M
