--- a/apps/minecraft.yaml
+++ b/apps/minecraft.yaml
@@ -17,8 +17,10 @@ spec:
   values:
     resources:
       requests:
-        memory: 3G
         cpu: 1
+        memory: 4G
+      limits:
+        memory: 4G
     minecraftServer:
       eula: "TRUE"
       version: "1.19"
