--- a/apps/spoorkapot/deployment.yaml
+++ b/apps/spoorkapot/deployment.yaml
@@ -38,3 +38,7 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /data
+          resources:
+            requests:
+              cpu: 20m
+              memory: 200M
