--- a/apps/vaultwarden.yaml
+++ b/apps/vaultwarden.yaml
@@ -60,3 +60,7 @@ spec:
           - hosts:
               - pass.bo0tzz.me
             secretName: vaultwarden-web-tls
+    resources:
+      requests:
+        cpu: 100m
+        memory: 250M
