--- a/media/jackett.yaml
+++ b/media/jackett.yaml
@@ -39,3 +39,7 @@ spec:
           - hosts:
               - jackett.bo0tzz.me
             secretName: jackett-web-tls
+    resources:
+      requests:
+        cpu: 20m
+        memory: 250M
