--- a/media/sonarr.yaml
+++ b/media/sonarr.yaml
@@ -42,3 +42,7 @@ spec:
           - hosts:
               - sonarr.bo0tzz.me
             secretName: sonarr-web-tls
+    resources:
+      requests:
+        cpu: 20m
+        memory: 500M
