--- a/media/youtube-dl.yaml
+++ b/media/youtube-dl.yaml
@@ -46,3 +46,7 @@ spec:
           - hosts:
               - ytdl.bo0tzz.me
             secretName: ytdl-web-tls
+    resources:
+      requests:
+        cpu: 20m
+        memory: 250M
