Rename immich library volume to match chart

--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -59,7 +59,7 @@ spec:
             key: JWT_SECRET
 
     persistence:
-      config:
+      library:
         enabled: true
         existingClaim: photo-library
     
