Set immich log level to verbose

--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -57,6 +57,7 @@ spec:
           secretKeyRef:
             name: immich-config
             key: JWT_SECRET
+      LOG_LEVEL: verbose
 
     persistence:
       library:
