Disable immich geocoding-dump volume

--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -63,6 +63,9 @@ spec:
       library:
         enabled: true
         existingClaim: photo-library
+
+      geocoding-dump:
+        enabled: false
     
     server:
       image:
