--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -72,6 +72,7 @@ spec:
         repository: altran1502/immich-server
         tag: v1.30.0_46-dev
     microservice:
+      enabled: false
       image:
         repository: altran1502/immich-server
         tag: v1.30.0_46-dev
