--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -58,6 +58,7 @@ spec:
             name: immich-config
             key: JWT_SECRET
       LOG_LEVEL: verbose
+      DISABLE_REVERSE_GEOCODING: 'true'
 
     persistence:
       library:
