--- a/apps/immich/immich.yaml
+++ b/apps/immich/immich.yaml
@@ -71,23 +71,23 @@ spec:
     server:
       image:
         repository: altran1502/immich-server
-        tag: v1.30.0_46-dev
+        tag: &immich-tag v1.31.0_49-dev
     microservice:
       image:
         repository: altran1502/immich-server
-        tag: v1.30.0_46-dev
+        tag: *immich-tag 
     machine_learning:
       image:
         repository: altran1502/immich-machine-learning
-        tag: v1.30.0_46-dev
+        tag: *immich-tag 
     web:
       image:
         repository: altran1502/immich-web
-        tag: v1.30.0_46-dev
+        tag: *immich-tag 
     proxy:
       image:
         repository: altran1502/immich-proxy
-        tag: v1.30.0_46-dev
+        tag: *immich-tag 
 
     ingress:
       main:
